<resources>
    <string name="app_name">PhasorViz</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add">Add</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_lock">(Un)lock</string>
    <string name="menu_del">Delete</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_about">About</string>
    <string name="menu_files">Files</string>
    <string name="menu_savepng">Save as .png</string>
    <string name="menu_savesvg">Save as .svg</string>
    <string name="menu_savejson">Save as .json</string>
    <string name="menu_loadjson">Load .json</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_download">Download</string>
    <string name="ui_selectjsonfile">Select a PhasorViz .json file</string>
    <string name="ui_installfilemanager">Please install a File Manager</string>
    <string name="ui_filetoobig">Invalid file (too big)</string>
    <string name="ui_filereadfailed">Failed to read file</string>
    <string name="ui_noextstorageaccess">Failed to access external storage</string>
    <string name="ui_filealreadyexists">File already exists</string>
    <string name="ui_fileisdirectory">Please choose a file</string>
    <string name="ui_filesaved">Saved under Download/phasorviz</string>
    <string name="ui_filesavefailed">Failed to save file</string>
    <string name="ui_discardphasors">Discard current phasors?</string>
    <string name="ui_warning">Warning</string>
</resources>
